<resources>
    <string name="app_name">ZenMom</string>
    <string name="heading">ZenMom</string>
    <string name="welcome">Welcome to <font size="18"><b>ZenMom</b></font>\nYour Trusted Companion on the Journey of Motherhood. Embrace the Experience!</string>
    <string name="allRightReserved">©LamuSoft Technology. 2024</string>
    <string name="shareMessage">🌟 Exciting News for Moms-to-Be! Welcome to ZenMom: Your Ultimate Pregnancy Companion! 🤰\n\nExplore a realm of realistic guidelines, baby growth milestones, and a supportive community, all tailored to make your pregnancy journey magical. 🌟👶 Download now to effortlessly embrace the joy of pregnancy!\n #ZenMom #PregnancyJoy #MomToBe 💖\n\nCurious to experience the magic? Dive in now! 🚀\n</string>
    <string name="about">About Us</string>
    <string name="ad">Advertising</string>
    <string name="medicalDisclaimer"><b>Content Disclaimer:</b>\nThis app does not provide medical advice. Content is for informational purposes only and does not replace professional consultation. Always consult a qualified healthcare provider for medical guidance. If you have a medical emergency, call your doctor or emergency services. We do not endorse specific treatments or practitioners. Reliance on app content is at your own risk. Developers are not liable for decisions based on the app.
        \n\n</string>
    <string name="babyGrowthTitle">Baby Growth</string>
    <string name="nutritionTitle">Nutrition Tips</string>
    <string name="partnerSupport">Partner Roles</string>
    <string name="babySIzeTitle">Baby Size</string>
    <string name="motherHealthTitle">Mother Health</string>
    <string name="guideTitle">Womb Wellness hub</string>
    <string name="testKitGuide">Explore Testing Kit…</string>
    <string name="BMI">BMI Calculator</string>
    <string name="more">More…</string>
    <string name="coming">Dear Valued <b>ZenMom</b> Users,\n\n<b>Greetings!</b> We are thrilled to inform you that our development team is diligently working on introducing new and enhanced features to elevate your experience with the app. The upcoming changes are currently in the development phase and will be unveiled shortly.\nYour patience is highly appreciated as we strive to deliver a seamless and enriched app environment. Should you have any feedback or suggestions, we are more than eager to hear from you.\n\nThank you for your continued support.\n\nBest Regards,\n<b>ZenMom Developer Team.</b></string>
    <string name="HomeMade">Homemade Test</string>
    <string name="Urine">Urine Test</string>
    <string name="Signs">Signs and Symptoms</string>
    <string name="shareTitle">Share</string>
    <string name="prenatalNutritionHeading">Secrets of Prenatal Nutrition for a Healthy Pregnancy</string>
    <string name="headingOfSexualHealth">Understanding Pregnancy and Sex: What You Need to Know</string>
    <string name="s">Your baby is well protected by the amniotic fluid and the uterus. As long as you do not experience problems such as premature birth or placenta problems, intercourse will not harm your baby.\n</string>
    <string name="sh1"><b>✤ Important facts</b></string>
    <string name="s1">
    • During pregnancy, your sexual interests may transform. For some individuals, there might be an increase in cravings, while others may not experience the same due to factors like fatigue, bodily changes, or nausea.\n
    • If you have problems with your pregnancy (multiple births, high blood pressure, placenta previa), please talk to your doctor.\n
    • Most couples continue active sex during the first year of their child \'s life.\n
    </string>
    <string name="sh2"><b>✤ Key message</b></string>
    <string name="s2">If your pregnancy is healthy and everything going well, sex is safe for you and your baby.</string>
    <string name="sh3"><b>✤ Common questions</b></string>
    <string name="s3"><b>• Can having sex cause a miscarriage?</b>\nHaving sex during pregnancy does not cause miscarriage. Most miscarriages occur because the fetus is not growing normally.\n\n<b>• Should I still use protection while pregnant?\n</b>While pregnant, it \'s important to note that pregnancy doesn \'t protect against sexually transmitted infections (STIs). Contracting STIs can pose serious risks for both you and your baby. It \'s crucial to take necessary precautions and maintain sexual health during this time. If you are pregnant and having sex with a new partner or a partner who may have an STI, use a condom to reduce the risk.\n
    </string>
    <string name="s4"><b>If you have any concerns or questions, or if you experience pain or unusual symptoms during sexual intercourse, please consult your doctor.</b></string>
    <string name="w25heading"><font size="20"><b>Weeks 25 to 28</b></font>\nKnow more about how your baby is growing and developing</string>
    <string name="w25to28">Between weeks 25 and 28 of pregnancy, several key developments unfold:</string>
    <string name="w25_1"><b>Size and Viability:\n</b> The fetus continues to grow, reaching a length of about 30 to 38 centimeters (12 to 15 inches) by week 28. Viability increases further, with a higher chance of survival if born prematurely.</string>
    <string name="w25_2"><b>Brain and Nervous System:\n</b> The brain undergoes significant growth and development during this period. The nervous system becomes more refined, and the fetus \'s ability to regulate basic bodily functions improves.</string>
    <string name="w25_3"><b>Lung Maturation:\n</b> While the lungs are not fully mature, the fetus continues producing surfactant, a substance crucial for breathing. Lung development progresses, enhancing the baby \'s respiratory capabilities.</string>
    <string name="w25_4"><b>Fetal Movement:\n</b> Movements become more coordinated, and patterns may emerge. The mother often feels a wide range of distinct movements, including kicks and stretches.</string>
    <string name="w25_5"><b>Eyelid Opening: </b>\nThe fetus \'s eyelids, which were closed earlier, may begin to open. The eyes are developing, and responses to light can occur.</string>
    <string name="w25_6"><b>Weight Gain:\n</b> The fetus starts to accumulate more body fat, contributing to a more rounded and proportionate appearance.</string>
    <string name="w25_7"><b>Kick Counts:\n</b> Healthcare providers may recommend kick counts to monitor fetal activity. Mothers are encouraged to track the number of kicks or movements within a specific time frame.</string>
    <string name="w25D">As always, individual pregnancies can vary, and regular prenatal care is essential. If you have specific concerns or questions, consulting with a healthcare professional is advisable.</string>
    <string name="urineH1"><b>Urine Test During Pregnancy</b></string>
    <string name="ur1H"><b>Is there a noticeable change in urine color during pregnancy?\n</b></string>
    <string name="ur1">Typically, urine appears as light yellow or transparent. However, this change is more pronounced in pregnant women, with their urine potentially transitioning from light yellow to dark yellow, even adopting an orange-yellow tint.\n\nThe variation in urine color is influenced by hydration levels. When the body is well-hydrated and urine is dilute, the concentration of urobilin decreases, resulting in a lighter shade. Conversely, dehydration elevates urobilin concentration, leading to a darker yellow color. Multiple factors contribute to the dynamic changes in urine color during pregnancy.\n</string>
    <string name="urH2"><b>Observing Changes in Urine Color during Pregnancy\n</b></string>
    <string name="ur2">A significant number of women utilize urine-based home pregnancy test kits to confirm their pregnancy status. Approximately two weeks after conception, these kits effectively identify the presence of human chorionic gonadotropin (HCG), a hormone released during pregnancy. The placenta, responsible for nourishing the fertilized egg embedded in the uterine walls, produces HCG.\n\nHCG levels exhibit a notable surge during the initial three months of pregnancy, gradually diminishing over the subsequent six months.\n</string>
    <string name="ur3H"><b>Precision of Urine Pregnancy Tests\n</b></string>
    <string name="ur3">Pregnancy tests available at drugstores boast an impressive 99 out of 100 accuracy rate, comparable to tests administered at a doctor \'s office. These tests operate by scrutinizing urine for the presence of human chorionic gonadotropin (HCG), a hormone exclusively produced in pregnant individuals.</string>
    <string name="discOfUrine">Disclaimer:\nThis urine testing guideline is for general information purposes only and is not a substitute for professional medical advice. Consult with your healthcare provider for personalized guidance. The information may not cover all factors, and the creators do not endorse specific brands of pregnancy test kits. Reliance on this content is at the user \'s discretion, and the creators are not responsible for any consequences.</string>
    <string name="testKitH1">Pregnancy Test Strips: A Comprehensive Guide to Understanding How They Work</string>
    <string name="testKitIntro">Pregnancy test strips, equipped with a convenient test window, have transformed at-home testing. Let\'s delve into their functionality!\n\n</string>
    <string name="testK1H"><b>Understanding pregnancy changes\n</b></string>
    <string name="testK1">Pregnancy initiates several changes in the body, including shifts in hormonal levels. Human chorionic gonadotropin (HCG), known as the \'hormone of pregnancy,\' increases during this period and is detectable in both blood and urine. Pregnancy test strips play a crucial role in identifying this hormone, specifically in urine.\n\nThe embryo actively secretes HCG upon attachment to the womb. Subsequent to embryo placement in the uterus, the HCG level rises rapidly. Pregnancy test strips provide a swift and efficient means to confirm pregnancy by monitoring the HCG hormone level in the urine. However, confirmation of pregnancy status can also be done by assessing the HCG level in your blood. Your doctor will take a blood sample, transmitting it to the laboratory for an HCG test. CMH Hospital Lahore, renowned for its well-established gynecology department, commonly performs the HCG pregnancy test. For more details, read about the HCG test in Pakistan.\n</string>
    <string name="testK2H"><b>Performing Pregnancy Tests Using Strips at Home: A Step-by-Step Guide\n</b></string>
    <string name="testK2">Performing a pregnancy test at home using strips is straightforward. Follow this step-by-step guide to ensure accurate and reliable results:\n\n<b>1. Obtain Pregnancy Test Strips: </b>These strips are readily available on the market, accessible at pharmacies or stores. The strip features a test window where you\'ll place the sample.\n<b>2. Collect the Sample: </b>As mentioned earlier, these strips detect the level of HCG hormone in urine. For optimal results, an early morning sample is recommended due to its higher hormone concentration. However, you can use samples at any time during the day. Collect urine in a clean and dry container.\n<b>3. Conduct the Test: </b>After collecting the urine sample, either apply it to the test window on the strip or place the strip in the urine sample. Some strips have a maximum line; ensure that your urine sample doesn\'t cross this line. Alternatively, you can insert the strip into your urine stream for testing.\n\n<i>Performing a pregnancy test at home using strips is a simple and reliable process when following these steps.</i></string>
    <string name="pC">-by freepik</string>
</resources>