<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".UrineTestGuide">
    <include layout="@layout/second_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Urine">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_circle"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/urineH1"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/ur1H"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/ur1"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/urH2"
                  android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/ur2"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/ur3H"
                  android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/ur3"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:id="@+id/divider51"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/discOfUrine" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>