<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".SexualHealth">

    <include layout="@layout/second_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_6sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageV"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_160sdp"
                        android:contentDescription="@string/pC"
                        android:scaleType="centerCrop"
                        />

                    <TextView
                        android:id="@+id/textView87"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/headingOfSexualHealth"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sh1"
                     android:textColor="@color/textColor"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s1"
                     android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/bg_circle"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/sh2"
                         android:textColor="@color/textColor"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/s2"
                         android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sh3"
                     android:textColor="@color/textColor"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s3"
                     android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/s4"
                     android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>