<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".TestingGuide">
    <include layout="@layout/second_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/testKitIntro">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_circle"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/testKitH1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/testKitIntro"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/testK1H"
                  android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/testK1"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/testK2H"
                  android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/testK2"
                  android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>