<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Weeks25to28">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_circle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/w25heading"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/w25to28"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_circle"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="center"
                    android:text="@string/w25_7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/w25D"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
</ScrollView>